Made room buttons wrap correctly
Made the room buttons above the filters  properly wrap/fill the room div. Every three rooms a new column is made for another three rooms to fill.  Also added the navigation for rooms above the room buttons. Need to figure out how they work on the actual LCD's before i implement that. My change for the day!

--- a/CMS/Styles/Wayfinding.css
+++ b/CMS/Styles/Wayfinding.css
@@ -1,6 +1,5 @@
 body{
-    /* Only commented out while I fix some things */
-    /*overflow: hidden;*/
+    overflow: hidden;
     white-space: nowrap;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -14,7 +13,7 @@ body{
 }
 
 #top{
-    height: 84%;
+    height: 81%;
     display: flex;
 }
 #maps{
@@ -52,7 +51,7 @@ body{
     margin-bottom: 5px;
     letter-spacing: 1px;
     font-size: 23px;
-    color: #797979;
+    color: #59595B;
     font-weight: lighter;
 }
 #EPSRGL_Logos{
@@ -80,13 +79,28 @@ body{
     height: 30px;
 }
 #bottom{
-    height: 16%;
+    height: 19%;
     width: 100%;
 }
+#roomNavigation{
+    height: 40.5;
+    width: 100%;
+    background-color: yellow;   
+}
+#roomNavigation:hover{
+    background-color: red;
+}
 #roomSelection{
-    height: 75%;
+    height: 120px;
     width: 100%;
     margin-bottom: -5px;
+}
+.roomColumn{
+    display: inline-block;
+    width: 310px;
+    padding: 0;
+    margin-right: 3px;
+    height: 100%;
 }
 .roomContainer{
     height: 28%;
@@ -96,7 +110,7 @@ body{
     border-radius: 3px;
     color: #1E4D2B;
     font-weight: 600;
-    width: 315px;
+    width: 295px;
     margin-top: 5px;
     margin-left: 5px;
     padding: 5px;
@@ -120,11 +134,14 @@ body{
 }
 #filters{
     background: #D9782D;
-    height: 25%;
+    height: 47.5px;
     width: 100%;
     display: flex;
     align-items: center;
     vertical-align: center;
+    bottom: 0px;
+    margin:0;
+    position: fixed;
 }
 .lower_controls{
     font-weight: 600;
@@ -135,7 +152,7 @@ body{
     background-color: transparent;
     border: 1px solid #fff;
     border-radius: 3px;
-    width: 150px;
+    width: 135px;
     text-align: center;
     vertical-align: center;
     line-height: 115%;
